# rust_game

./: Cargo.toml  README.md
assets/: labyrinth.yml  labyrinth_scene.yml  other_scene.yml  scene.yml
crates/app/: Cargo.toml
crates/engine/: Cargo.toml
crates/engine/src/: app.rs  lib.rs  math.rs  scene.rs
crates/engine/src/archetypes/: archetype.rs  mod.rs
crates/engine/src/components/: attributes.rs  camera.rs  hierarchy.rs  input.rs  light.rs  mod.rs  model.rs  name.rs  orientation.rs  particle.rs  physics.rs  position.rs  render.rs  script.rs  spawner.rs  terrain.rs  texture.rs
crates/engine/src/ecs/: ecs.rs  entity_manager.rs  event_bus.rs  memory.rs  mod.rs  signature.rs  tag_manager.rs
crates/engine/src/modules/: core.rs
crates/engine/src/rendering/: mod.rs  renderer.rs
crates/engine/src/rendering/shaders/: background.wgsl  debug_line.wgsl  triangle.wgsl  ui.wgsl
crates/engine/src/scripts/: mod.rs
crates/engine/src/systems/: camera.rs  hierarchy.rs  input.rs  mod.rs  movement.rs  particle.rs  physics.rs  rendering.rs  scripting.rs  spawner.rs
crates/engine/tests/: archetypes_tests.rs  ecs_tests.rs
src/: lib.rs  main.rs
src/archetypes/: archetype.rs  entity.rs  mod.rs
src/components/: mod.rs  model.rs  name.rs  position.rs
src/core/: main_window.rs  mod.rs  state.rs
src/ecs/: ecs.rs  entity.rs  entity_manager.rs  mod.rs  name_component.rs  position_component.rs  tag_manager.rs
src/graphics/: camera.rs  game_window.rs  mod.rs  state.rs
src/modules/: core.rs  window.rs
tests/: archetypes_tests.rs  ecs_tests.rs  tag_tests.rs
(+10 files in other folders)
