[workspace]
resolver = "2"
members = [
    "crates/engine",
    "crates/app",
]
default-members = ["crates/app"]

[workspace.dependencies]
winit = "0.30"
wgpu = "23.0"
log = "0.4.22"
env_logger = "0.10"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.25"
tobj = "4.0"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
rodio = { version = "0.17", default-features = false, features = ["vorbis", "wav"] }
rapier3d = "0.23"
