[package]
name = "rust_game"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { workspace = true }
wgpu = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
tobj = { workspace = true }
image = { workspace = true }
rodio = { workspace = true }
rapier3d = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
